force-app/main/default/objects/Room__c/fields/Current_Occupant__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The guest currently occupying the room.</description>
    <label>Current Occupant</label>
    <referenceTo>Guest__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>