force-app/main/default/objects/Room__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>