force-app/main/default/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The type or category of the room.</description>
    <label>Room Type</label>
    <referenceTo>Room_Type__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>